--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@layer0/next": "4.0.1-next-1632405384-b3d555c48.0",
     "@layer0/prefetch": "4.0.1-next-1632405384-b3d555c48.0",
     "@layer0/react": "4.0.1-next-1632405384-b3d555c48.0",
+    "autoprefixer": "^10.3.6",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
-    "prettier": "^2.4.1"
+    "postcss": "^8.3.8",
+    "prettier": "^2.4.1",
+    "tailwindcss": "^2.2.16"
   }
 }
